Changelog
=========

1.0b5 - Unreleased
------------------

1.0b4 - 2009-03-06
------------------

* Move the Plone dependency into the buildout to avoid the problem
  reported in
  http://david.wglick.org/2009/heads-up-watch-out-for-dependencies-on-plone/

1.0b3 - 2009-02-23
------------------

* Added support for links

* Added test coverage

1.0b2 - Released September 9th, 2008
------------------------------------

* Fixed portal_javascripts rendering traceback
  [optilude]

* Fixed image player view bug
  [optilude]

1.0b1 - Released September 6th, 2008
------------------------------------

* Initial release
