@@ -4,6 +4,10 @@ Changelog
 1.0b5 - Unreleased
 ------------------
 
+* Have the event handlers make sure they're working with an object from a
+  site where collective.flowplayer is installed.
+  [davisagli]
+
 1.0b4 - 2009-03-06
 ------------------
 
